--- a/daikoku/javascript/src/style/variables.scss
+++ b/daikoku/javascript/src/style/variables.scss
@@ -41,7 +41,7 @@ $form-select-focused-color:#{"var(--form-select-focused-color, #fff)"};//form
 $form-select-focused-text-color:#{"var(--form-select-focused-text-color, #ddd)"};//form
 $form-select-heading-color:#{"var(--form-select-heading-color, #3b4151)"};//form
 $form-select-hover-color:#{"var(--form-select-hover-color, #ccc)"};//form
-$form-select-hover-text-color:#{"var(--form-select-hover-text-color, #aaa)"};//form
+$form-select-hover-text-color:#{"var(--form-select-hover-text-color, #000)"};//form
 
 $badge-tags-bg-color:#{"var(--badge-tags-bg-color, #ffc107)"};//components
 $badge-tags-bg-hover-color:#{"var(--badge-tags-bg-hover-color, #ffe1a7)"};//components
