--- a/daikoku/javascript/src/style/components/btn.scss
+++ b/daikoku/javascript/src/style/components/btn.scss
@@ -161,3 +161,13 @@ button {
     top: -30px;
   }
 }
+
+.star-button{
+  border-radius: 4px;
+  border:'1px solid';
+  overflow: hidden;
+  box-sizing: content-box;
+  border-color: var(--btn-border-color, #97b0c7);
+  background-color: var(--btn-border-color, #fff);
+  font-size: 18px;
+}
