--- a/daikoku/javascript/src/components/utils/dnd/components/Action.module.scss
+++ b/daikoku/javascript/src/components/utils/dnd/components/Action.module.scss
@@ -13,14 +13,14 @@ $focused-outline-color: #4c9ffe;
   // border: none;
   outline: none;
   appearance: none;
-  background-color: transparent;
+  // background-color: transparent;
   -webkit-tap-highlight-color: transparent;
 
-  @media (hover: hover) {
-    &:hover {
-      background-color: var(--action-background, rgba(0, 0, 0, 0.05));
-    }
-  }
+  // @media (hover: hover) {
+  //   &:hover {
+  //     background-color: var(--action-background, rgba(0, 0, 0, 0.05));
+  //   }
+  // }
 
   svg {
     flex: 0 0 auto;
