--- a/daikoku/javascript/src/style/components/dragAndDropDoc.scss
+++ b/daikoku/javascript/src/style/components/dragAndDropDoc.scss
@@ -18,10 +18,10 @@
     position: absolute;
     top: -10px;
     right: -10px;
-    color: $danger-color;
-    &:hover {
-      background-color: $danger-color;
-    }
+    // color: $danger-color;
+    // &:hover {
+    //   background-color: $danger-color;
+    // }
   }
 
   &:hover {
