fix select group

--- a/daikoku/javascript/src/style/components/reactSelect.scss
+++ b/daikoku/javascript/src/style/components/reactSelect.scss
@@ -27,7 +27,27 @@
 }
 
 .reactSelect__group-heading{
-  color:$form-select-heading-color !important;
+  padding: 10px;
+  background-color: $menu-text-hover-bg-color;
+  color : $menu-text-hover-color;
+  
+}
+.groupStyles {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.groupBadgeStyles{
+  background-color: #EBECF0;
+  border-radius: 2em;
+  color: #172B4D;
+  display: inline-block;
+  font-size: 12;
+  font-weight: normal;
+  line-height: 1;
+  min-width: 1;
+  padding: 0.16666666666667em 0.5em
 }
 
 .select-sm {
