--- a/daikoku/javascript/src/style/components/discussion.scss
+++ b/daikoku/javascript/src/style/components/discussion.scss
@@ -62,7 +62,7 @@
     display: flex;
     flex-direction: row;
     padding: 10px;
-    background: #fff;
+    background: $section-bg-color;
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
     &__message{
@@ -89,7 +89,7 @@
       width: 70px;
       border: none;
       cursor: pointer;
-      background-color: #fff;
+      background-color:  $section-bg-color;
       color: $info-color;
       outline: none;
       &:hover {
