cokor on header

--- a/daikoku/javascript/src/style/components/reactSelect.scss
+++ b/daikoku/javascript/src/style/components/reactSelect.scss
@@ -29,8 +29,7 @@
 .reactSelect__group-heading{
   padding: 10px;
   background-color: $menu-text-hover-bg-color;
-  color : $menu-text-hover-color;
-  
+  color : $menu-text-hover-color !important;
 }
 .groupStyles {
   display: flex;
