--- a/daikoku/javascript/src/style/components/btn.scss
+++ b/daikoku/javascript/src/style/components/btn.scss
@@ -59,8 +59,10 @@ button {
 }
 
 .btn-outline-success.disabled,
+.btn-outline-success.link__disabled,
 .btn-outline-success:disabled,
 .btn-outline-primary.disabled,
+.btn-outline-primary.link__disabled,
 .btn-outline-primary:disabled {
   background-color: #fff;
   border-color: #9e9e9e;
