--- a/daikoku/javascript/src/style/components/backOffice.scss
+++ b/daikoku/javascript/src/style/components/backOffice.scss
@@ -59,7 +59,7 @@
 
   .widget-title {
     padding: 0.5rem 1rem;
-    border: O.1rem solid;
+    border: 0.1rem solid;
     border-bottom: 0.5rem solid;
     border-color: $btn-border-color;
     background-color: $btn-bg-color;
