--- a/daikoku/javascript/src/style/variables.scss
+++ b/daikoku/javascript/src/style/variables.scss
@@ -13,7 +13,7 @@ $navbar-brand-color: #{"var(--navbar-brand-color, #fff)"};//navbar
 $footer-text-color: #{"var(--footer-text-color, #fff)"};//footer
 $footer-bg-color: #{"var(--footer-bg-color, #7f96af)"};//footer
 
-$aside-text-color:#{"var(--sidebar-text-color, #000)"};//sidebar
+$aside-text-color:#{"var(--sidebafr-text-color, #000)"};//sidebar
 $aside-bg-color: #{"var(--sidebar-bg-color, #f8f9fa)"};//sidebar
 
 $menu-bg-color:#{"var(--menu-bg-color, #fff)"};//menu
