--- a/daikoku/javascript/src/style/components/btn.scss
+++ b/daikoku/javascript/src/style/components/btn.scss
@@ -6,14 +6,17 @@ button {
   color: $btn-bg-color;
   background-color: $btn-text-color;
   border-color: $btn-bg-color;
+
   &:hover {
     color: $btn-bg-color;
     background-color: $btn-text-color;
   }
+
   &-negative {
     color: $btn-text-color;
     border-color: $btn-border-color;
     background-color: $btn-bg-color;
+
     &:hover {
       color: $btn-bg-color;
       background-color: $btn-border-color;
@@ -43,7 +46,7 @@ button {
   }
 }
 
-.btn-group-xs > .btn,
+.btn-group-xs>.btn,
 .btn-xs {
   padding: 0.25rem 0.4rem;
   font-size: 0.875rem;
@@ -67,16 +70,19 @@ button {
   background-color: #fff;
   border-color: #9e9e9e;
   color: #9e9e9e;
+
   &:hover,
   &.active {
     color: #9e9e9e !important;
   }
 }
 
-.btn-outline-success, .btn-outline-success:focus {
+.btn-outline-success,
+.btn-outline-success:focus {
   background-color: #fff;
   color: $success-color;
   border-color: $success-color;
+
   &:hover,
   &.active {
     color: #fff;
@@ -85,10 +91,12 @@ button {
   }
 }
 
-.btn-outline-danger, .btn-outline-danger:focus {
+.btn-outline-danger,
+.btn-outline-danger:focus {
   background-color: #fff;
   color: $danger-color;
   border-color: $danger-color;
+
   &:hover,
   &.active {
     color: #fff;
@@ -97,10 +105,12 @@ button {
   }
 }
 
-.btn-outline-primary, .btn-outline-primary:focus {
+.btn-outline-primary,
+.btn-outline-primary:focus {
   background-color: #fff;
   color: $info-color;
   border-color: $info-color;
+
   &:hover,
   &.active {
     color: #fff;
@@ -111,7 +121,7 @@ button {
 
 .btn-outline-primary:not(:disabled):not(.disabled):active,
 .btn-outline-primary:not(:disabled):not(.disabled).active,
-.show > .btn-outline-primary.dropdown-toggle {
+.show>.btn-outline-primary.dropdown-toggle {
   color: #fff;
   border-color: $info-color;
   background-color: $info-color;
@@ -134,8 +144,7 @@ button {
   width: 40px;
   height: 40px;
 
-  .multi-btn-center {
-  }
+  .multi-btn-center {}
 
   .multi-button {
     transition: all 0.2s ease-in-out;
@@ -153,23 +162,38 @@ button {
   .multi-button-right {
     right: -30px;
   }
+
   .multi-button-left {
     left: -30px;
   }
+
   .multi-button-down {
     bottom: -30px;
   }
+
   .multi-button-up {
     top: -30px;
   }
 }
 
-.star-button{
+.star-button {
   border-radius: 4px;
-  border:'1px solid';
+  border: '1px solid';
   overflow: hidden;
   box-sizing: content-box;
-  border-color: var(--btn-border-color, #97b0c7);
-  background-color: var(--btn-border-color, #fff);
+  border-color: $btn-border-color;
+  background-color: $btn-border-color;
   font-size: 18px;
+}
+
+.new-team-button {
+  .avatar__container {
+    &:hover {
+      background-color: rgba(0,0,0,0.1);
+
+      // svg {
+      //   color: $btn-bg-color
+      // }
+    }
+  }
 }
