renaming for coherence

--- a/daikoku/javascript/src/style/layout/home.scss
+++ b/daikoku/javascript/src/style/layout/home.scss
@@ -1,5 +1,5 @@
 .organisation__header {
-  border-bottom: 1px solid $section-border-color;
+  border-bottom: 1px solid $section-bottom-color;
   position: relative;
   background-color: $section-bg-color;
   color:$section-text-color;
