--- a/daikoku/javascript/src/style/variables.scss
+++ b/daikoku/javascript/src/style/variables.scss
@@ -31,7 +31,7 @@ $btn-border-color: #{"var(--btn-border-color, #97b0c7)"};//button
 
 $section-bg-color:  #{"var(--section-bg-color, #f8f9fa)"};//body
 $section-text-color:#{"var(--section-text-color, #6c757d)"};//body
-$section-border-color:  #{"var(--section-bottom-color, #eee)"};//body
+$section-bottom-color:  #{"var(--section-bottom-color, #eee)"};//body
 
 $form-text-color:#{"var(--form-text-color, #000)"};//form
 $form-border-color:#{"var(--form-border-color, #586069)"};//form
