--- a/cli/templates/manager.html
+++ b/cli/templates/manager.html
@@ -81,6 +81,12 @@
         font-weight: 400;
         font-size: .85rem;
     }
+
+    .components {
+        display: flex;
+        flex-direction: column;
+        overflow-y: scroll;
+    }
 </style>
 <script defer>
     document.addEventListener("DOMContentLoaded", (event) => {
