--- a/daikoku/javascript/src/style/variables.scss
+++ b/daikoku/javascript/src/style/variables.scss
@@ -50,8 +50,8 @@ $badge-tags-text-color:#{"var(--badge-tags-text-color, #212529)"};//components
 
 $error-color: #{"var(--error-color, #ff6347)"};//status
 $error-hover-color: #{"var(--error--hover-color, #ffa494)"};//status
-$success-color: #{"var(--success-color, #4F8A10)"};//status
-$success-hover-color: #{"var(--success-hover-color, #76cf18)"};//status
+$success-color: #{"var(--success-color, #65B741)"};//status
+$success-hover-color: #{"var(--success-hover-color, #C1F2B0)"};//status
 $info-color: #{"var(--info-color, #17a2b8)"};//status
 $warning-color: #{"var(--warning-color, #ffc107)"};//status
 $danger-color: #{"var(--danger-color, #dc3545)"};//status
