--- a/cli/templates/empty/src/blocks/Footer.html
+++ b/cli/templates/empty/src/blocks/Footer.html
@@ -3,7 +3,7 @@
       <div class="row py-4">
         <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img 
           style="border-radius: 25%"
-          src="{{daikoku-asset-url 'dad1d1655-604b-4274-92e8-28e254b8c32e'}}" 
+          src="{{daikoku-asset-url 'wasmo-png'}}" 
           alt="" width="180" class="mb-3">
           <p class="font-italic text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
           <ul class="list-inline mt-4">
