renaming to have the same var name than customizer theme

--- a/daikoku/javascript/src/style/components/backOffice.scss
+++ b/daikoku/javascript/src/style/components/backOffice.scss
@@ -40,8 +40,8 @@
     height: 300px;
     overflow-y: scroll;
     border-radius: 4px;
-    background-color: $aside-bg-color;
-    color: $aside-text-color;
+    background-color: $sidebar-bg-color;
+    color: $sidebar-text-color;
   }
 
   .small{
