--- a/daikoku/javascript/src/style/components/apicard.scss
+++ b/daikoku/javascript/src/style/components/apicard.scss
@@ -11,7 +11,7 @@
   justify-content: space-between;
 }
 .card {
-  background-color: $aside-bg-color;
+  background-color: $sidebar-bg-color;
 }
 .card-body {
   border : none !important;
