--- a/daikoku/javascript/src/style/components/tiles.scss
+++ b/daikoku/javascript/src/style/components/tiles.scss
@@ -20,8 +20,8 @@
 .home-tile{
   flex: 1 1 49%;
   padding: 12px;
-  background-color: $aside-bg-color;
-  color:$aside-text-color;
+  background-color: $sidebar-bg-color;
+  color:$sidebar-text-color;
   margin-top: 5px;
   margin-right: 5px;
   display: flex;
