--- a/daikoku/javascript/src/style/layout/teamBilling.scss
+++ b/daikoku/javascript/src/style/layout/teamBilling.scss
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: space-between;
   //border: 1px solid #bbc9d8;
-  background-color: $aside-bg-color;
+  background-color: $sidebar-bg-color;
 
   .title__container__bloc {
     display: flex;
@@ -42,7 +42,7 @@
 
   .api__billing__card {
     cursor: pointer;
-    background-color: $aside-bg-color;
+    background-color: $sidebar-bg-color;
     //border: 1px solid #e8e8e8;
     padding: 10px;
     width: 160px;
