remove all bootstrap btns

--- a/daikoku/javascript/src/style/components/modal.scss
+++ b/daikoku/javascript/src/style/components/modal.scss
@@ -5,7 +5,7 @@
   color: $body-text-color;
 }
 
-.modal-footer .btn-success,.modal-footer .btn-danger{
+.modal-footer .btn-danger{
   background: none;
 }
 
