WIP - unauthenticated router

--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -82,14 +82,14 @@ a.nav-link.active {
 }
 
 [role="root-container"] {
-  padding-top: 130px;
+  //padding-top: 130px;
 
   @media screen and (min-width: 576px) {
-    padding-top: 90px;
+    //padding-top: 90px;
   }
 
   @media screen and (min-width: 768px) {
-    padding-top: 60px;
+    //padding-top: 60px;
   }
 }
 
