--- a/daikoku/javascript/src/style/layout/home.scss
+++ b/daikoku/javascript/src/style/layout/home.scss
@@ -1,4 +1,7 @@
+
+
 .organisation__header {
+  display: flex;
   border-bottom: 1px solid $section-bottom-color;
   position: relative;
   background-color: $section-bg-color;
