improve redoc display

--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -39,3 +39,4 @@
 @import 'components/fastMode.scss';
 @import 'components/reactSelect.scss';
 @import 'components/sortable.scss';
+@import 'components/redoc.scss';
