--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -5,7 +5,7 @@
 @import 'layout/sidebar';
 @import 'layout/navbar';
 @import 'layout/login';
-@import 'layout/teamBilling';
+@import 'layout/footer.scss';
 
 @import "components/antCalandar";
 @import 'components/avatarWithAction';
@@ -19,17 +19,14 @@
 @import 'components/pagination';
 @import 'components/popover';
 @import 'components/reactTable';
-@import 'components/tableApi';
 @import 'components/tiles';
 @import 'components/toastr';
 @import 'components/input';
 @import 'components/backOffice.scss';
-@import 'components/error.scss';
 @import 'components/switch.scss';
 @import 'components/consumptions.scss';
 @import 'swagger';
 @import "components/recharts.scss";
-@import 'components/footer.scss';
 @import 'components/discussion.scss';
 @import 'components/messages.scss';
 @import 'components/breadcrumb.scss';
@@ -38,3 +35,7 @@
 @import 'components/reactSelect.scss';
 @import 'components/sortable.scss';
 @import 'components/redoc.scss';
+@import 'components/teamBilling';
+@import 'components/navDocumentation';
+@import 'components/swagger';
+@import 'components/tabs';
