--- a/daikoku/javascript/src/style/components/apicard.scss
+++ b/daikoku/javascript/src/style/components/apicard.scss
@@ -14,6 +14,17 @@
       overflow: hidden;
     }
   }
+  .plan-body {
+    border: none;
+    margin: 0;
+    border-radius:0;
+    border-bottom-left-radius: 5px ;
+    border-bottom-right-radius: 5px ;
+    overflow: scroll;
+  }
+  #dropdownMenuButton {
+    color: $card-link-color;
+  }
 }
 
 .card-header {
@@ -41,43 +52,17 @@
   font-size: .75rem;
 }
 
-.card .plan-body {
-  border: none;
-  // background-color: $companion_bg-color;
-  margin: 0;
-  border-radius:0;
-  border-bottom-left-radius: 5px ;
-  border-bottom-right-radius: 5px ;
-  overflow: scroll;
-}
-
 a.card-link:hover, a.card-link:visited, a.card-link:link, a.card-link:active {
   text-decoration: none;
 }
 
 .api__name {
   font-size: 1.5rem;
-  //cursor: pointer;
 
   &.api--forbidden {
     cursor: not-allowed;
   }
 }
-
-// .view-selectors {
-//   // .active, .btn.active, :not(.btn-check) + .btn:active {
-//   //   color: $btn-bg-color;
-//   //   background-color: $btn-border-color;
-//   //   border-color: $btn-border-color;
-//   // }
-// }
-
-.card {
-  #dropdownMenuButton {
-    color: $card-link-color;
-  }
-}
-
 
 .api-card {
   .plan-body {
@@ -110,105 +95,6 @@ a.card-link:hover, a.card-link:visited, a.card-link:link, a.card-link:active {
 }
 
 .card-img-top:hover .btn { display: block;}
-
-.burger-menu {
-  width: 60px;
-  height: 45px;
-  position: relative;
-  // margin: 50px auto;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  cursor: pointer;
-
-  span {
-    display: block;
-    position: absolute;
-    height: 9px;
-    width: 50%;
-    background: #d3531a;
-    opacity: 1;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
-  }
-
-  span:nth-child(even) {
-    left: 50%;
-    border-radius: 0 9px 9px 0;
-  }
-
-  span:nth-child(odd) {
-    left:0px;
-    border-radius: 9px 0 0 9px;
-  }
-
-  span:nth-child(1), span:nth-child(2) {
-    top: 0px;
-  }
-
-  span:nth-child(3), span:nth-child(4) {
-    top: 18px;
-  }
-
-  span:nth-child(5), span:nth-child(6) {
-    top: 36px;
-  }
-
-  &.open span:nth-child(1),&.open span:nth-child(6) {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-  }
-
-  &.open span:nth-child(2),&.open span:nth-child(5) {
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-  }
-
-  &.open span:nth-child(1) {
-    left: 5px;
-    top: 7px;
-  }
-
-  &.open span:nth-child(2) {
-    left: calc(50% - 5px);
-    top: 7px;
-  }
-
-  &.open span:nth-child(3) {
-    left: -50%;
-    opacity: 0;
-  }
-
-  &.open span:nth-child(4) {
-    left: 100%;
-    opacity: 0;
-  }
-
-  &.open span:nth-child(5) {
-    left: 5px;
-    top: 29px;
-  }
-
-  &.open span:nth-child(6) {
-    left: calc(50% - 5px);
-    top: 29px;
-  }
-}
 
 .pricing-content {
   gap: 20px;
