--- a/daikoku/javascript/src/style/components/dragAndDropDoc.scss
+++ b/daikoku/javascript/src/style/components/dragAndDropDoc.scss
@@ -1,12 +1,10 @@
 .tree-item {
-  --vertical-padding: 10px;
 
   border-radius: 4px;
-
   position: relative;
   display: flex;
   align-items: center;
-  padding: var(--vertical-padding) 10px;
+  padding: 10px 10px;
   background-color: $level3_bg-color;
   border: 1px solid #dedede;
   color: $level3_text-color;
@@ -18,10 +16,6 @@
     position: absolute;
     top: -10px;
     right: -10px;
-    // color: $danger-color;
-    // &:hover {
-    //   background-color: $danger-color;
-    // }
   }
 
   &:hover {
