API spec can be openApi or asyncAPI

--- a/daikoku/javascript/src/style/swagger.css
+++ b/daikoku/javascript/src/style/swagger.css
@@ -1,4 +1,4 @@
-
+/* 
 #swagger-editor {
   font-size: 1.3em;
   font-family: Roboto,sans-serif;
@@ -46,4 +46,4 @@
 .Pane2 {
   height: calc(100vh - 51px) !important;
   overflow-y: scroll;
-}
+} */
