fix typescript warnings

--- a/cli/templates/empty/src/pages/page.html
+++ b/cli/templates/empty/src/pages/page.html
@@ -16,7 +16,7 @@ _authenticated: false
 
 <body>
     <main>
-        <h1>Welcome your CMS</h1>
+        <h1>Welcome to your CMS</h1>
     </main>
 </body>
 
