add border-radius on submenu

--- a/daikoku/javascript/src/style/layout/navbar.scss
+++ b/daikoku/javascript/src/style/layout/navbar.scss
@@ -264,6 +264,7 @@ a.navbar-brand, #teamSelector:hover {
             padding-left: .5rem;
             box-sizing: border-box;
             height: 35px;
+            border-radius: 4px;
 
             &.active {
               // border-bottom: 1px solid $companion_text-hover-bg-color;
