fix the lack of scoll inside the widget

--- a/daikoku/javascript/src/style/components/backOffice.scss
+++ b/daikoku/javascript/src/style/components/backOffice.scss
@@ -6,7 +6,7 @@
 
   .widget {
     height: 300px;
-    // overflow-y: scroll;
+    overflow-y: scroll;
     border-radius: 4px;
     background-color: $level2_bg-color;
     color: $level2_text-color;
